--- a/index.html
+++ b/index.html
@@ -1,21 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+
+    <title>Schoolish</title>
 
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Poppins');
+      @import url("https://fonts.googleapis.com/css2?family=Poppins");
 
       * {
         padding: 0;
         margin: 0;
         box-sizing: border-box;
-        font-family: 'Poppins', sans-serif;
+        font-family: "Poppins", sans-serif;
+      }
+
+      :root {
+        --mainColor: #7b00c3;
+        --mainColorLight: #5767aa;
+        --secondaryColor: #c99de3;
+        --textColor: #eee;
+      }
+
+      .arrow {
+        height: 12px;
+        width: 12px;
+        border-bottom: 4px solid;
+        border-right: 4px solid;
+        border-bottom-right-radius: 20%;
+      }
+
+      .arrow-right {
+        rotate: -45deg;
+      }
+
+      #alertMessageBox {
+        padding: 15px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        border-radius: 5px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
       }
     </style>
+
+    <script
+      src="https://unpkg.com/typify.js@1.1.9/dist/typify.min.js"
+      defer
+    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
   </head>
   <body>
     <div id="root"></div>
