--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
+    <!-- Metatags -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <meta name="google-adsense-account" content="ca-pub-2515847504885873">
     <title>Schoolish</title>
 
     <style>
@@ -97,12 +93,20 @@
       }
     </style>
 
+    <!-- JavaScript -->
     <script
       src="https://unpkg.com/typify.js@1.1.9/dist/typify.min.js"
       defer
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
+
+    <!-- Stylesheet -->
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    />
   </head>
   <body>
     <div id="root">
